rnc/src/snapshots/muffy_rnc__tests__parse_file-60.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "SVG.Image.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Image.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "image",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Image.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.image.content",
                            combine: None,
                            pattern: Group(
                                [
                                    Many0(
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.Description.class",
                                            },
                                        ),
                                    ),
                                    Many0(
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.Animation.class",
                                            },
                                        ),
                                    ),
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "image",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "image",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.image",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.image.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Define(
                        Definition {
                            name: "attlist.image",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Conditional.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Style.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Viewport.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Color.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Opacity.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Graphics.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Profile.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Clip.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Mask.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Filter.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.GraphicalEvents.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Cursor.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.XLinkEmbed.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.External.attrib",
                                        },
                                    ),
                                    Optional(
                                        Choice(
                                            [
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "common.attrs.aria.implicit.img",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "common.attrs.aria",
                                                    },
                                                ),
                                            ],
                                        ),
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "x",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "Coordinate.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "y",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "Coordinate.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "width",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "Length.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "height",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "Length.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "preserveAspectRatio",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "PreserveAspectRatioSpec.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "transform",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "TransformList.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
